--- a/index.html
+++ b/index.html
@@ -3,22 +3,31 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Управление балансом и тарифами</title>
+  <title>Мини Апп с фоном и анимацией</title>
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <style>
+    /* Темно-красный фон */
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: #f7f9fc;
       margin: 0;
       padding: 20px;
-      color: #222;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #8B0000; /* темно-красный */
+      color: #fff;
+      overflow: hidden;
+      position: relative;
+      height: 100vh;
+      box-sizing: border-box;
       text-align: center;
     }
     h1 {
       margin-bottom: 20px;
+      z-index: 10;
+      position: relative;
     }
     .buttons {
       margin-bottom: 20px;
+      position: relative;
+      z-index: 10;
     }
     button {
       cursor: pointer;
@@ -30,6 +39,8 @@
       margin: 0 10px;
       font-size: 16px;
       transition: background-color 0.3s ease;
+      position: relative;
+      z-index: 10;
     }
     button:hover {
       background: #2678d2;
@@ -37,16 +48,19 @@
     #content {
       max-width: 480px;
       margin: 0 auto;
-      background: white;
+      background: rgba(255 255 255 / 0.1);
       border-radius: 12px;
       padding: 20px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.5);
       text-align: left;
+      color: white;
+      position: relative;
+      z-index: 10;
     }
     .tariff {
       display: flex;
       align-items: center;
-      border-bottom: 1px solid #eee;
+      border-bottom: 1px solid rgba(255 255 255 / 0.2);
       padding: 15px 0;
     }
     .tariff:last-child {
@@ -58,6 +72,7 @@
       margin-right: 20px;
       border-radius: 8px;
       object-fit: contain;
+      filter: drop-shadow(0 0 2px black);
     }
     .tariff-details {
       flex-grow: 1;
@@ -68,7 +83,7 @@
     }
     .tariff-details p {
       margin: 0 0 8px;
-      color: #555;
+      color: #ddd;
       font-weight: 500;
     }
     .tariff button {
@@ -101,6 +116,32 @@
     .update-btn:hover {
       background: #e07b00;
     }
+    
+    /* Контейнер для летающих иконок WhatsApp */
+    .whatsapp-icon {
+      position: fixed;
+      width: 40px;
+      height: 40px;
+      opacity: 0.7;
+      user-select: none;
+      pointer-events: none;
+      animation-timing-function: linear;
+    }
+
+    /* Анимация: снизу вверх с колебаниями по горизонтали */
+    @keyframes floatUp {
+      0% {
+        transform: translateY(100vh) translateX(0);
+        opacity: 0;
+      }
+      10% {
+        opacity: 0.7;
+      }
+      100% {
+        transform: translateY(-100px) translateX(50px);
+        opacity: 0;
+      }
+    }
   </style>
 </head>
 <body>
@@ -123,7 +164,7 @@
           <h2>💰 Управление баллами</h2>
 
           <div class="tariff">
-            <img src="https://img.icons8.com/ios-filled/100/000000/clock--v1.png" alt="10 минут" />
+            <img src="https://img.icons8.com/ios-filled/100/ffffff/clock--v1.png" alt="10 минут" />
             <div class="tariff-details">
               <h3>⏳ 10 минут</h3>
               <p>$0.00</p>
@@ -131,7 +172,7 @@
           </div>
 
           <div class="tariff">
-            <img src="https://img.icons8.com/ios-filled/100/000000/clock--v1.png" alt="60 минут" />
+            <img src="https://img.icons8.com/ios-filled/100/ffffff/clock--v1.png" alt="60 минут" />
             <div class="tariff-details">
               <h3>⏳ 60 минут</h3>
               <p>$0.00</p>
@@ -139,7 +180,7 @@
           </div>
 
           <div class="tariff">
-            <img src="https://img.icons8.com/ios-filled/100/000000/clock--v1.png" alt="120 минут" />
+            <img src="https://img.icons8.com/ios-filled/100/ffffff/clock--v1.png" alt="120 минут" />
             <div class="tariff-details">
               <h3>⏳ 120 минут</h3>
               <p>$0.00</p>
@@ -157,7 +198,7 @@
         <h2>💎 Выбор тарифа</h2>
 
         <div class="tariff">
-          <img src="https://img.icons8.com/ios-filled/100/000000/clock--v1.png" alt="10 минут" />
+          <img src="https://img.icons8.com/ios-filled/100/ffffff/clock--v1.png" alt="10 минут" />
           <div class="tariff-details">
             <h3>⏳ 10 минут</h3>
             <p>$0.10</p>
@@ -166,7 +207,7 @@
         </div>
 
         <div class="tariff">
-          <img src="https://img.icons8.com/ios-filled/100/000000/clock--v1.png" alt="60 минут" />
+          <img src="https://img.icons8.com/ios-filled/100/ffffff/clock--v1.png" alt="60 минут" />
           <div class="tariff-details">
             <h3>⏳ 60 минут</h3>
             <p>$10.00</p>
@@ -175,7 +216,7 @@
         </div>
 
         <div class="tariff">
-          <img src="https://img.icons8.com/ios-filled/100/000000/clock--v1.png" alt="120 минут" />
+          <img src="https://img.icons8.com/ios-filled/100/ffffff/clock--v1.png" alt="120 минут" />
           <div class="tariff-details">
             <h3>⏳ 120 минут</h3>
             <p>$12.00</p>
@@ -194,6 +235,19 @@
 
     // При загрузке показываем баланс
     showBalance();
+
+    // Создаем иконки WhatsApp
+    const iconsCount = 15; // количество иконок
+    for (let i = 0; i < iconsCount; i++) {
+      const icon = document.createElement('img');
+      icon.src = 'https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg';
+      icon.classList.add('whatsapp-icon');
+      icon.style.left = Math.random() * window.innerWidth + 'px';
+      icon.style.animation = `floatUp ${5 + Math.random() * 5}s linear infinite`;
+      icon.style.animationDelay = (Math.random() * 10) + 's';
+      document.body.appendChild(icon);
+    }
   </script>
 </body>
 </html>
+
